tests/negative/regression/r38.orng
fn main() -> Int { 
    let const a: @typeof( fn () -> () { } )
} 
